--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Hex Colors</title>
 </head>
 <body>
-    <div class="container">
-        <div class="hex-colors">
-            <h1>Click the button bellow to display the hex code of the random color</h1>
-            <h2>The hex code of the color is #<span id="hex-code">000000</span></h2>
-            <button type="button" class="btn btn-primary" onclick="changeColor()">Click Me</button>
-        </div>
+   <div class="container">
+    <div class="hex-colors">
+        <h1>Click the button to display the hex code of the random color</h1>
+        <h2>The hex code of the color is #<span id="hex-code">000000</span></h2>
+        <button type="button" class="btn btn-danger" onclick="changeColor()">Click Me</button>
     </div>
+   </div>
 
     <script src="script.js"></script>
 </body>
